Encoding and links (#121)
* first fix of the links in the md files

* cleanup

* ContextItem-Konzept

* added start script for qwen

* cleanup turn

* PersistentContext use

* added component architecture

* cleanup

* added qwen 3.8

* added architecture part

* finished cleanup

* first bugfix round

* some manual fixes

* R1 False-Positive nach Compact (bloßer Pfad im Summary → keine
Re-Injektion) — behoben per Header-Vertrag.

* R2 mid commit

* fixed tests

* update docs

* cleanup tests